# ANN-lib

./: CMakeLists.txt  README.md  binary.model  example.model  mnist.model  multilabel-test-labels.csv  multilabel-train-labels.csv  regression-test-data.csv  regression-test-labels.csv  regression-train-labels.csv  regression.model
data/: multilabel-test-data.csv  multilabel-test-labels.csv  multilabel-train-data.csv  multilabel-train-labels.csv  regression-test-data.csv  regression-test-labels.csv  regression-train-labels.csv
include/ann/: activation.h  exception.h  feedForwardModel.h  layer.h  modelDescriptors.h  modelLoader.h
include/ann/activations/: activation.h  leakyRelu.h  relu.h  sigmoid.h  softmax.h  step.h
include/ann/layers/: MAELoss.h  MSELoss.h  binaryLoss.h  categoricalLoss.h  categoricalLoss.tpp  categoricalLossSoftmax.h  categoricalLossSoftmax.tpp  dense.h  dense.tpp  dropout.h  loss.h  softmax.h  softmax.tpp
include/ann/loss/: MAE.h  MSE.h  binary.h  categorical.h  categoricalSoftmax.h  loss.h
include/ann/optimizers/: adagrad.h  adam.h  optimizer.h  rmsprop.h  sgd.h  sgd.tpp
lib/loaders/: CMakeLists.txt
lib/loaders/include/loaders/: csv.h  exception.h  mnist.h
lib/loaders/src/: csv.cpp  exception.cpp  mnist.cpp
lib/math/: CMakeLists.txt
lib/math/include/math/: dot.h  dot.tpp  exception.h  linear.h  linear.tpp  matrix.h  matrix.tpp  matrixBase.h  matrixView.h  matrixView.tpp  random.h  random.tpp  vector.h  vector.tpp  vectorBase.h  vectorView.h  vectorView.tpp
lib/mnist/: CMakeLists.txt
lib/mnist/include/mnist/: exception.h  loader.h
lib/mnist/src/: exception.cpp  loader.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/utils/: exceptions.h  parallel.h  timer.h  variants.h
lib/utils/src/: parallel.cpp
src/: CMakeLists.txt  main.cpp
src/ann/: activation.cpp  feedForwardModel.cpp  modelLoader.cpp
src/ann/activations/: leakyRelu.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  step.cpp
src/ann/layers/: MAELoss.cpp  MSELoss.cpp  binaryLoss.cpp  categoricalLoss.cpp  categoricalLossSoftmax.cpp  dense.cpp  dropout.cpp  loss.cpp  softmax.cpp
src/ann/loss/: MAE.cpp  MSE.cpp  binary.cpp  categorical.cpp  categoricalSoftmax.cpp  loss.cpp
src/ann/optimizers/: adagrad.cpp  adam.cpp  rmsprop.cpp  sgd.cpp
